Merge `funcionalTest` and `integrationTest` to `test`